# fairfetch

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  SECURITY.md  mcp.json  openapi.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
api/: __init__.py  dependencies.py  main.py  negotiation.py  routes.py
compliance/: __init__.py  copyright.py  headers.py  lineage.py
core/: __init__.py  converter.py  knowledge_packet.py  search_engine.py  signatures.py  summarizer.py  url_validation.py
deploy/akamai/: bundle.json  edgeworker.js
deploy/cloudflare/: worker.ts  wrangler.toml
deploy/cloudfront/: viewer_request.py
deploy/fastly/: Cargo.toml
deploy/fastly/src/: main.rs
docs/: AI_AGENT_GUIDE.md  CONCEPTS.md  PUBLISHER_GUIDE.md  RFC_TEMPLATE.md
interfaces/: __init__.py  facilitator.py  license_provider.py  summarizer.py
mcp_server/: __init__.py  server.py
payments/: __init__.py  facilitator.py  mock_facilitator.py  mock_license_facilitator.py  wallet_ledger.py  x402.py
plugins/: __init__.py  cloud_adapter.py
scripts/: dev_server.py
tests/: conftest.py  test_api.py  test_compliance.py  test_core.py  test_coverage_gaps.py  test_end_to_end.py  test_mcp.py  test_payments.py  test_route_pricing.py  test_search_engine_indexing.py  test_wallet.py
